--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "bitbucket_server_cli"
 version = "0.1.0"
-authors = ["Jens Brimfors <jens.brimfors@nordnet.se>"]
+authors = ["Jens Brimfors <jens.brimfors@gmail.se>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 serde = {version = "1.0.103", features = ["derive"]}
