Added steps to the build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,7 @@ before_script:
   - cargo install --force cargo-audit
   - cargo generate-lockfile
 script:
+  - cargo test
+  - cargo build
   - cargo audit
 
