--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ include = [
 serde = {version = "1.0", features = ["derive"]}
 reqwest = "0.9"
 generic_error = "0.1"
+structopt = "0.3"
 rayon = "1.2"
 git2 = "0.11"
 indicatif = "0.14"
