--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ homepage = "https://github.com/jensim/bitbucket_server_cli/"
 documentation = "https://github.com/jensim/bitbucket_server_cli/blob/master/README.md"
 keywords = ["cli", "bitbucket", "git", "clone"]
 categories = ["command-line-utilities", "development-tools"]
+include = [
+    "src/**/*.rs",
+    "Cargo.toml",
+]
 
 [dependencies]
 serde = {version = "1.0", features = ["derive"]}
