Simplify build on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,3 @@
 language: rust
 rust: 1.41.0
-cache: cargo # cache cargo-audit once installed
-before_script:
-  - cargo install --force cargo-audit
-  - cargo generate-lockfile
-script:
-  - cargo test
-  - cargo build
-  - cargo audit
-
+cache: cargo
