--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
+os: osx
 language: rust
 rust: 1.41.0
 cache: cargo
 
-deploy:
-  provider: script
-  script: cargo install cargo-bump && cargo-bump $TRAVIS_TAG && cargo login $CRATES_TOKEN && cargo publish
-  on:
-    tags: true
+after_success:
+  if [ ! -z "$TRAVIS_TAG" ]; then
+  cargo install cargo-bump && \
+  cargo-bump $TRAVIS_TAG && \
+  cargo login $CRATES_TOKEN && \
+  cargo publish
+  fi
