--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bitbucket_server_cli"
-version = "0.2.3"
+version = "0.2.4"
 authors = ["Jens Brimfors <jens.brimfors@gmail.se>"]
 edition = "2018"
 license = "MIT"
@@ -17,8 +17,10 @@ include = [
 ]
 
 [dependencies]
-serde = {version = "1.0", features = ["derive"]}
-reqwest = "0.9"
+serde = { version = "1.0", features = ["derive"] }
+reqwest = { version = "0.10", features = ["json"] }
+futures = "0.3"
+tokio = { version = "0.2", features = ["full"] }
 generic_error = "0.1"
 structopt = "0.3"
 rayon = "1.3"
