--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ install: cargo build --release --verbose
 script: cargo test --release --workspace --verbose
 
 before_deploy:
+  - ls -lah target/release/
   - tar -cfz target/release/bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz $( ls target/release/bitbucket_server_cli{,.exe} 2>/dev/null )
   - export RELEASE_BODY=$(shasum -a 256 target/release/bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz)
 
