--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,10 @@ env:
 
 matrix:
   include:
-    - name: "MacOS Build"
-      os: osx
-
     - name: "Linux Build"
       os: linux
+#    - name: "MacOS Build"
+#      os: osx
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_f217180e22ee_key -iv $encrypted_f217180e22ee_iv -in ./encrypted/id_rsa.enc -out ./encrypted/id_rsa -d
