--- a/.travis.yml
+++ b/.travis.yml
@@ -26,14 +26,13 @@ install: cargo build --release --verbose
 script: cargo test --release --workspace --verbose
 
 before_deploy:
-  - "ls -lah target/release/bitbucket_server_cli"
-  - "tar -cfz target/release/bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz target/release/bitbucket_server_cli"
-  - "export RELEASE_BODY=$(shasum -a 256 target/release/bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz)"
+  - "tar -cfz bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz target/release/bitbucket_server_cli"
+  - "export RELEASE_BODY=$(shasum -a 256 bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz)"
 
 deploy:
   provider: releases
   api_key: ${GH_TOKEN}
-  file: target/release/bitbucket_server_cli-*.tar.gz
+  file: bitbucket_server_cli-*.tar.gz
   skip_cleanup: true
   body: ${RELEASE_BODY}
   overwrite: true
