--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,10 @@ matrix:
 
 before_install:
 # Debugging
+  - echo "${TRAVIS_BUILD_DIR}"
   - mkdir -p ./target/release
   - echo cat > ./target/release/test_file.txt
-  - tar -cfz "${TRAVIS_BUILD_DIR}test_archive-${TRAVIS_OS_NAME}.tar.gz" "./target/release/test_file.txt"
+  - tar -cfz "./test_archive-${TRAVIS_OS_NAME}.tar.gz" "./target/release/test_file.txt"
 
   - openssl aes-256-cbc -K $encrypted_f217180e22ee_key -iv $encrypted_f217180e22ee_iv -in ./encrypted/id_rsa.enc -out ./encrypted/id_rsa -d
   - openssl aes-256-cbc -K $encrypted_b2704e9bbe4d_key -iv $encrypted_b2704e9bbe4d_iv -in ./encrypted/id_rsa.pub.enc -out ./encrypted/id_rsa.pub -d
@@ -34,8 +35,8 @@ before_deploy:
   - echo "${TRAVIS_BUILD_DIR}"
   - ls -lah "./target/release/bitbucket_server_cli"
   - ls -lah "${TRAVIS_BUILD_DIR}"
-  - tar -cfz "${TRAVIS_BUILD_DIR}bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz" "./target/release/bitbucket_server_cli"
-  - export RELEASE_BODY=$(shasum -a 256 "${TRAVIS_BUILD_DIR}bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz")
+  - tar -cfz "${TRAVIS_BUILD_DIR}/bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz" "./target/release/bitbucket_server_cli"
+  - export RELEASE_BODY=$(shasum -a 256 "${TRAVIS_BUILD_DIR}/bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz")
 
 deploy:
   provider: releases
