Added missing quote mark

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script: cargo test --release --workspace --verbose
 
 before_deploy:
   - tar -czvf "bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz" "target/release/bitbucket_server_cli"
-  - export RELEASE_BODY=$(shasum -a 256 bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz")
+  - export RELEASE_BODY=$(shasum -a 256 "bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz")
 
 deploy:
   provider: releases
