--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ futures = "0.3.4"
 tokio = { version = "0.2.19", features = ["full"] }
 generic_error = "0.1.0"
 structopt = "0.3.14"
+clap = "2.33.0"
 indicatif = "0.14.0"
 pickledb = "0.4.1"
 dialoguer = "0.5.1"
