--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ env:
 
 matrix:
   fast_finish: true
-  allow_failures: []
+  allow_failures:
+    - "Audit"
   include:
     - name: "MacOS Build"
       os: osx
@@ -27,7 +28,16 @@ matrix:
         - cargo clippy
       before_deploy: skip
       deploy: []
-
+    - name: "Audit"
+      os: linux
+      before_install: skip
+      install: skip
+      before_script:
+        - cargo install cargo-audit
+      script:
+        - cargo audit
+      before_deploy: skip
+      deploy: []
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_f217180e22ee_key -iv $encrypted_f217180e22ee_iv -in travis_encrypted/id_rsa.enc -out travis_encrypted/id_rsa -d
