--- a/.travis.yml
+++ b/.travis.yml
@@ -61,10 +61,10 @@ deploy:
   api_key: ${GH_TOKEN}
   file: target/release/bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz
   name: Draft-travis-${TRAVIS_BUILD_NUMBER}
-  body: "[Travis build ${TRAVIS_BUILD_NUMBER}](https://travis-ci.org/github/jensim/bitbucket_server_cli/builds/${TRAVIS_BUILD_NUMBER})"
   skip_cleanup: true
   draft: true
   file_glob: true
+  overwrite: true
   on:
     branch: master
     tags: false
