Do not run integration tests on travis, since we do not have access to a working bitbucket server there.

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ before_install:
 install: cargo build --release --verbose
 
 script:
-  - cargo test --release --verbose
+  - cargo test --release --verbose --lib
 
 before_deploy:
   - pushd target/release
