Build on newer linux version than default

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ matrix:
       os: osx
     - name: "Linux Build"
       os: linux
+      dist: bionic
     - name: "Linting"
       os: linux
       before_install: skip
