"Overwrite: false" might stop reuse of old draft with lingering files

--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ deploy:
   skip_cleanup: true
   draft: true
   file_glob: true
-  overwrite: true
+  overwrite: false
   on:
     branch: master
     tags: false
