--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ if: tag IS blank
 language: rust
 cache:
   directories:
-  - $HOME/.cargo
-  - $TRAVIS_BUILD_DIR/target
+    - $HOME/.cargo
+    - $TRAVIS_BUILD_DIR/target
 
 before_cache:
   - rm -rf $HOME/.cargo/registry
@@ -16,7 +16,7 @@ env:
 matrix:
   fast_finish: true
   allow_failures:
-  - Audit
+  - name: Audit
   include:
   - name: MacOS Build
     os: osx
@@ -28,15 +28,15 @@ matrix:
     before_install: skip
     install: skip
     before_script:
-      - rustup component add rustfmt-preview
-      - rustup component add clippy-preview
+    - rustup component add rustfmt-preview
+    - rustup component add clippy-preview
     script:
-      - cargo fmt --all -- --check
-      - cargo clippy
-    before_deploy: skip
-    deploy:
+    - cargo fmt --all -- --check
+    - cargo clippy
     - git tag "tavis-$TRAVIS_BUILD_NUMBER"
     - git push --tags origin
+    before_deploy: skip
+    deploy: []
   - name: Audit
     os: linux
     before_install: skip
@@ -49,10 +49,10 @@ matrix:
     deploy: []
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_f217180e22ee_key -iv $encrypted_f217180e22ee_iv -in travis_encrypted/id_rsa.enc -out travis_encrypted/id_rsa -d
-  - openssl aes-256-cbc -K $encrypted_b2704e9bbe4d_key -iv $encrypted_b2704e9bbe4d_iv -in travis_encrypted/id_rsa.pub.enc -out travis_encrypted/id_rsa.pub -d
-  - chmod 0600 travis_encrypted/id_rsa{,.pub}
-  - mv travis_encrypted/id_rsa{,.pub} ${HOME}/.ssh/
+- openssl aes-256-cbc -K $encrypted_f217180e22ee_key -iv $encrypted_f217180e22ee_iv -in travis_encrypted/id_rsa.enc -out travis_encrypted/id_rsa -d
+- openssl aes-256-cbc -K $encrypted_b2704e9bbe4d_key -iv $encrypted_b2704e9bbe4d_iv -in travis_encrypted/id_rsa.pub.enc -out travis_encrypted/id_rsa.pub -d
+- chmod 0600 travis_encrypted/id_rsa{,.pub}
+- mv travis_encrypted/id_rsa{,.pub} ${HOME}/.ssh/
 
 install: cargo build --release --verbose
 
@@ -69,11 +69,11 @@ deploy:
   api_key: ${GH_TOKEN}
   file: target/release/bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz
   name: Draft-travis-${TRAVIS_BUILD_NUMBER}
-  skip_cleanup: true
+  cleanup: false
   draft: true
   file_glob: true
   overwrite: true
-  body: [![Build Status](https://api.travis-ci.org/jensim/bitbucket_server_cli.svg?commit=${TRAVIS_COMMIT})](https://travis-ci.org/jensim/bitbucket_server_cli/builds/${TRAVIS_BUILD_ID})
+  body: "[![Build Status](https://api.travis-ci.org/jensim/bitbucket_server_cli.svg?commit=${TRAVIS_COMMIT})](https://travis-ci.org/jensim/bitbucket_server_cli/builds/${TRAVIS_BUILD_ID})"
   on:
     branch: master
     tags: false
