--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,13 @@ jobs:
   - name: Audit
   include:
   - stage: Build
+    name: MacOS Build
+    os: osx
+  - stage: Build
+    name: Linux Build
+    os: linux
+    dist: bionic
+  - stage: Checkup
     name: Linting
     os: linux
     install: skip
@@ -38,14 +45,7 @@ jobs:
     - git push origin $GIT_TAG
     before_deploy: skip
     deploy: []
-  - stage: Build
-    name: MacOS Build
-    os: osx
-  - stage: Build
-    name: Linux Build
-    os: linux
-    dist: bionic
-  - stage: Audit
+  - stage: Checkup
     name: Audit
     os: linux
     before_install: skip
@@ -87,3 +87,4 @@ deploy:
   body: "[![Build Status](https://api.travis-ci.org/jensim/bitbucket_server_cli.svg?commit=${TRAVIS_COMMIT})](https://travis-ci.org/jensim/bitbucket_server_cli/builds/${TRAVIS_BUILD_ID})"
   on:
     branch: master
+    tags: false
