--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 if: tag IS blank
 
+os: linux
+dist: bionic
 language: rust
 cache:
   directories:
@@ -17,16 +19,8 @@ jobs:
   allow_failures:
   - name: Audit
   include:
-  - stage: Build
-    name: MacOS Build
-    os: osx
-  - stage: Build
-    name: Linux Build
-    os: linux
-    dist: bionic
   - stage: Checkup
     name: Linting
-    os: linux
     install: skip
     before_script:
     - rustup component add rustfmt-preview
@@ -47,7 +41,6 @@ jobs:
     deploy: []
   - stage: Checkup
     name: Audit
-    os: linux
     before_install: skip
     install: skip
     before_script:
@@ -56,6 +49,11 @@ jobs:
     - cargo audit
     before_deploy: skip
     deploy: []
+  - stage: Build
+    name: MacOS Build
+    os: osx
+  - stage: Build
+    name: Linux Build
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_f217180e22ee_key -iv $encrypted_f217180e22ee_iv
@@ -77,7 +75,7 @@ before_deploy:
 
 deploy:
   provider: releases
-  api_key: "${GH_TOKEN}"
+  token: "${GH_TOKEN}"
   file: target/release/bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz
   name: Draft-travis-${TRAVIS_BUILD_NUMBER}
   edge: true
@@ -85,7 +83,7 @@ deploy:
   draft: true
   file_glob: true
   overwrite: true
-  body: "[![Build Status](https://api.travis-ci.org/jensim/bitbucket_server_cli.svg?commit=${TRAVIS_COMMIT})](https://travis-ci.org/jensim/bitbucket_server_cli/builds/${TRAVIS_BUILD_ID})"
+  release_notes: "[![Build Status](https://api.travis-ci.org/jensim/bitbucket_server_cli.svg?commit=${TRAVIS_COMMIT})](https://travis-ci.org/jensim/bitbucket_server_cli/builds/${TRAVIS_BUILD_ID})"
   on:
     branch: master
     tags: false
