--- a/.travis.yml
+++ b/.travis.yml
@@ -82,8 +82,7 @@ deploy:
   cleanup: false
   draft: true
   file_glob: true
-  overwrite: true
-  #release_notes: "[![Build Status](https://api.travis-ci.org/jensim/bitbucket_server_cli.svg?commit=${TRAVIS_COMMIT})](https://travis-ci.org/jensim/bitbucket_server_cli/builds/${TRAVIS_BUILD_ID})"
+  overwrite: false
   on:
     branch: master
     tags: false
