--- a/.travis.yml
+++ b/.travis.yml
@@ -55,8 +55,8 @@ deploy:
   token: "${GH_TOKEN}"
   file: target/release/bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz
   name: Draft-travis-${TRAVIS_BUILD_NUMBER}
-  edge: true
-  cleanup: false
+  skip_cleanup: true
+  release_notes: "Travis build #${TRAVIS_BUILD_NUMBER} [![Build Status](https://api.travis-ci.org/jensim/bitbucket_server_cli.svg?commit=${TRAVIS_COMMIT})](https://travis-ci.org/jensim/bitbucket_server_cli/builds/${TRAVIS_BUILD_ID})"
   draft: true
   file_glob: true
   overwrite: false
