--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,8 @@ jobs:
     os: windows
     before_deploy:
     - pushd target/release
-    - tar -czvf "bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz" $( ls bitbucket_server_cli{,.exe} 2>/dev/null )
-    - certutil -hashfile bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz
+    - tar -czvf "bitbucket_server_cli-${TRAVIS_OS_NAME}.tgz" bitbucket_server_cli.exe
+    - certutil -hashfile bitbucket_server_cli-${TRAVIS_OS_NAME}.tgz
     - popd
 
 install: cargo build --release --verbose
@@ -46,14 +46,14 @@ script: cargo test --release --verbose --lib
 
 before_deploy:
 - pushd target/release
-- tar -czvf "bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz" $( ls bitbucket_server_cli{,.exe} 2>/dev/null )
-- shasum -a 256 "bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz"
+- tar -czvf "bitbucket_server_cli-${TRAVIS_OS_NAME}.tgz" bitbucket_server_cli
+- shasum -a 256 "bitbucket_server_cli-${TRAVIS_OS_NAME}.tgz"
 - popd
 
 deploy:
   provider: releases
   token: "${GH_TOKEN}"
-  file: target/release/bitbucket_server_cli-${TRAVIS_OS_NAME}.tar.gz
+  file: target/release/bitbucket_server_cli-${TRAVIS_OS_NAME}.tgz
   name: Draft-travis-${TRAVIS_BUILD_NUMBER}
   skip_cleanup: true
   release_notes: "Travis build #${TRAVIS_BUILD_NUMBER} [![Build Status](https://api.travis-ci.org/jensim/bitbucket_server_cli.svg?commit=${TRAVIS_COMMIT})](https://travis-ci.org/jensim/bitbucket_server_cli/builds/${TRAVIS_BUILD_ID})"
