--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bitbucket_server_cli"
-version = "0.3.11"
+version = "0.3.12"
 authors = ["Jens Brimfors <jens.brimfors@gmail.se>"]
 edition = "2018"
 license = "MIT"
@@ -27,6 +27,8 @@ clap = "2.33.0"
 indicatif = "0.14.0"
 pickledb = "0.4.1"
 dialoguer = "0.6.2"
+atomic-counter = "1.0.1"
+parse_duration = "2.1.0"
 
 [dev-dependencies]
 tokio-test = "0.2.1"
