Fix audit steps

--- a/.github/workflows/rust-audit.yml
+++ b/.github/workflows/rust-audit.yml
@@ -13,5 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Audit
-      run: audit
+    - name: Install cargo-audit
+      run: cargo install --force cargo-audit
+    - name: Generate lockfile
+      run: cargo generate-lockfile
+    - name: Perform audit
+      run: cargo audit
