--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,6 +23,13 @@ jobs:
         run: cargo build --examples --lib --bins
       - name: Test
         run: cargo test --verbose --examples --lib --bins
+  integration-test:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
+    steps:
+      - uses: actions/checkout@v2
+      - name: "Run integration test"
+        run: integration_test/run_integration_test.sh
   clippy:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip')"
