--- a/.github/workflows/rust-dependency-versions.yml
+++ b/.github/workflows/rust-dependency-versions.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install cargo-edit
-        run: cargo install --force cargo-edit
+        run: cargo install cargo-edit
       - name: Perform dependency version check
         run: |
           if [[ $(cargo upgrade --dry-run | tail -1) != "bitbucket_server_cli:" ]]; then
