--- a/.github/workflows/rust-dependency-versions.yml
+++ b/.github/workflows/rust-dependency-versions.yml
@@ -16,6 +16,13 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Install cargo-edit
         run: cargo install cargo-edit
       - name: Perform dependency version check
