--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         rust: [stable, nightly, beta]
+      continue-on-error: ${{ matrix.rust != 'stable' }}
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
       - uses: hecrj/setup-rust-action@v1
@@ -30,7 +31,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ matrix.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Build
         run: cargo build --examples --lib --bins
       - name: Test
@@ -46,7 +47,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ matrix.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: "Run integration test"
         run: integration_test/run_integration_test.sh
   clippy:
@@ -70,6 +71,7 @@ jobs:
     strategy:
       matrix:
         rust: [stable, beta]
+      continue-on-error: ${{ matrix.rust != 'stable' }}
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
       - uses: hecrj/setup-rust-action@v1
@@ -82,7 +84,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Install rustfmt
         run: rustup component add rustfmt
       - name: Run rustfmt
