--- a/.github/workflows/rust-audit.yml
+++ b/.github/workflows/rust-audit.yml
@@ -5,6 +5,7 @@ on:
     - cron: '0 2 * * *' # run at 2 AM UTC
   push:
     paths:
+      - '.github/workflows/rust-audit.yml'
       - '**/Cargo.toml'
       - 'Cargo.lock'
 
