--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,10 +3,10 @@ name: Rust
 on:
   push:
     paths:
+      - '.github/workflows/rust.yml'
       - '**/Cargo.toml'
       - 'Cargo.lock'
       - '**/*.rs'
-      - '.github/workflows/*.yml'
       - 'integration_test/**'
   pull_request:
     branches: [ master ]
