--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,8 +16,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        rust: [stable, nightly, beta]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+        rust: [stable, beta, nightly]
     continue-on-error: ${{ matrix.rust != 'stable' }}
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
@@ -31,7 +31,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ matrix.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: cargo-${{ matrix.os }}-${{ matrix.rust }}-${{ hashFiles('**/Cargo.lock') }}
       - name: Build
         run: cargo build --examples --lib --bins
       - name: Test
@@ -47,7 +47,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ matrix.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: cargo-integration-test-${{ hashFiles('**/Cargo.lock') }}
       - name: "Run integration test"
         run: integration_test/run_integration_test.sh
   clippy:
@@ -61,7 +61,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: cargo-clippy-${{ hashFiles('**/Cargo.lock') }}
       - name: Install clippy
         run: rustup component add clippy
       - name: Run clippy
@@ -84,7 +84,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: cargo-fmt-${{ matrix.rust }}-${{ hashFiles('**/Cargo.lock') }}
       - name: Install rustfmt
         run: rustup component add rustfmt
       - name: Run rustfmt
