--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,9 +21,6 @@ jobs:
     continue-on-error: ${{ matrix.rust != 'stable' }}
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
-      - uses: hecrj/setup-rust-action@v1
-        with:
-          rust-version: ${{ matrix.rust }}
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
@@ -31,7 +28,10 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: cargo-${{ matrix.os }}-${{ matrix.rust }}
+          key: test-${{ matrix.os }}-${{ matrix.rust }}
+      - uses: hecrj/setup-rust-action@v1
+        with:
+          rust-version: ${{ matrix.rust }}
       - name: Build
         run: cargo build --examples --lib --bins
       - name: Test
@@ -47,7 +47,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: cargo-integration-test
+          key: integration-test
       - name: "Run integration test"
         run: integration_test/run_integration_test.sh
   clippy:
@@ -61,7 +61,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: cargo-clippy
+          key: clippy
       - name: Install clippy
         run: rustup component add clippy
       - name: Run clippy
@@ -84,7 +84,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: cargo-fmt-${{ matrix.rust }}
+          key: fmt-${{ matrix.rust }}
       - name: Install rustfmt
         run: rustup component add rustfmt
       - name: Run rustfmt
