--- a/.github/workflows/rust-dependency-versions.yml
+++ b/.github/workflows/rust-dependency-versions.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           path: |
             ~/.cargo/registry
+            ~/.cargo/bin
             ~/.cargo/git
             target
           key: cargo-${{ hashFiles('**/Cargo.lock') }}
