--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - '.github/workflows/rust.yml'
       - '**/Cargo.toml'
-      - 'Cargo.lock'
+      - '**/Cargo.lock'
       - '**/*.rs'
       - 'integration_test/**'
   pull_request:
