--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ include = [
 
 [dependencies]
 serde = { version = "1.0.118", features = ["derive"] }
-reqwest = { version = "0.10.10", features = ["json"] }
+reqwest = { git = "https://github.com/seanmonstar/reqwest.git", branch = "master", features = ["json"] }
 futures = "0.3.8"
-tokio = { version = "0.2.24", features = ["full"] }
+tokio = { version = "1.0.1", features = ["full"] }
 generic_error = "0.1.0"
 structopt = "0.3.21"
 clap = "2.33.3"
@@ -31,8 +31,8 @@ atomic-counter = "1.0.1"
 parse_duration = "2.1.0"
 
 [dev-dependencies]
-tokio-test = "0.2.1"
-rand = "0.8"
+tokio-test = "0.4.0"
+rand = "0.8.0"
 
 [badges]
 travis-ci = { repository = "jensim/bitbucket_server_cli", branch = "master" }
