--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ include = [
 
 [dependencies]
 serde = { version = "1.0.118", features = ["derive"] }
-reqwest = { git = "https://github.com/seanmonstar/reqwest.git", branch = "master", features = ["json"] }
+reqwest = { version = "0.11.0", features = ["json"] }
 futures = "0.3.8"
 tokio = { version = "1.0.1", features = ["full"] }
 generic_error = "0.1.0"
@@ -32,7 +32,7 @@ parse_duration = "2.1.0"
 
 [dev-dependencies]
 tokio-test = "0.4.0"
-rand = "0.8.0"
+rand = "0.8.1"
 
 [badges]
 travis-ci = { repository = "jensim/bitbucket_server_cli", branch = "master" }
