Switch from master to main

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,7 +9,7 @@ on:
       - '**/*.rs'
       - 'integration_test/**'
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   test:
