--- a/.github/workflows/rust-dependency-versions.yml
+++ b/.github/workflows/rust-dependency-versions.yml
@@ -9,7 +9,7 @@ on:
       - '**/Cargo.toml'
       - 'Cargo.lock'
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   check-dependency-versions:
