--- a/.travis/build-common.yml
+++ b/.travis/build-common.yml
@@ -28,5 +28,5 @@ deploy:
   overwrite: true
   #release_notes: "[![Build Status](https://api.travis-ci.org/jensim/bitbucket_server_cli.svg?commit=${TRAVIS_COMMIT})](https://travis-ci.org/jensim/bitbucket_server_cli/builds/${TRAVIS_BUILD_ID})"
   on:
-    branch: master
+    branch: main
     tags: false
