--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,9 @@ on:
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+    needs:
+      - fmt
+      - clippy
     strategy:
       matrix:
         rust: [stable, beta, nightly]
@@ -40,6 +43,7 @@ jobs:
         run: cargo test --verbose --examples --lib --bins
   integration-test:
     runs-on: ubuntu-latest
+    needs: test
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
       - uses: actions/checkout@v2
